--- a/Indie1/index.html
+++ b/Indie1/index.html
@@ -11,7 +11,7 @@
 
 <body>
 
- <a href="../pa4index.html" style="display: block; text-align: left;">Back to Portfolio Main Page</a>
+ <a href="../index.html" style="display: block; text-align: left;">Back to Portfolio Main Page</a>
  
 
 
