--- a/Indie2/index.html
+++ b/Indie2/index.html
@@ -9,7 +9,7 @@
     <body>
 
 
-<a href="../pa4index.html">Back to Portfolio Main Page</a>
+<a href="../index.html">Back to Portfolio Main Page</a>
 
         <nav>
             <ul>
