--- a/Indie4/index.html
+++ b/Indie4/index.html
@@ -35,7 +35,7 @@
     </style>
 </head>
 <body>
-    <a href="../pa4index.html">Back to Portfolio Main Page</a>
+    <a href="../index.html">Back to Portfolio Main Page</a>
     <div>
         <h1>Under Construction</h1>
         <p>My Bringing it All Together Assignment will be Here Soon!</p>
