--- a/Plab1/index.html
+++ b/Plab1/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-<a href="../pa4index.html">Back to Portfolio Main Page</a> 
+<a href="../index.html">Back to Portfolio Main Page</a> 
 
     <header>
         <h1>How to Make a Basketball Foul Shot</h1>
