--- a/Plab2/index.html
+++ b/Plab2/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
 
-<a href="../pa4index.html">Back to Portfolio Main Page</a> 
+<a href="../index.html">Back to Portfolio Main Page</a> 
 
 
     <div class="content">
