--- a/PracticeActivity1/index.html
+++ b/PracticeActivity1/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <br>
-     <a href="../pa4index.html" style="display: block; text-align: left;">Back to Portfolio Main Page</a> 
+     <a href="../index.html" style="display: block; text-align: left;">Back to Portfolio Main Page</a> 
     
     <h1>Rare and one of a kind, truly authentic Raiders Miniature Helmet</h1>
 
