--- a/PracticeActivity2/index.html
+++ b/PracticeActivity2/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="activity2styles.css">
 </head>
 <body>
-     <a href="../pa4index.html">Back to Portfolio Main Page</a>
+     <a href="../index.html">Back to Portfolio Main Page</a>
     <div class="container">
         <div class="header">
         <div class="headertext"> 
