--- a/PracticeActivity3/cover/index.html
+++ b/PracticeActivity3/cover/index.html
@@ -65,7 +65,7 @@ image set as the background. This seems to work. -->
 
   <body class="d-flex h-100 text-center text-white bg-dark">
 
-    <a href="../../pa4index.html">Back to Portfolio Main Page</a> 
+    <a href="../../index.html">Back to Portfolio Main Page</a> 
 
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
       <header class="mb-auto">
